turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:23: error: not found: value levecrayon
    levecrayon()
    ^HouseTree:25: error: not found: value baissecrayon
    baissecrayon()
    ^